--- a/final-project/style.css
+++ b/final-project/style.css
@@ -25,6 +25,13 @@
     --paragraph-1-font: 20px "Plus Jakarta Sans", sans-serif;
     --paragraph-2-font: 18px "Plus Jakarta Sans", sans-serif;
     --paragraph-3-font: 14px "Plus Jakarta Sans", sans-serif;
+
+    --header-height: 86px;
+}
+
+html {
+    scroll-behavior: smooth;
+    scroll-snap-type: y proximity;
 }
 
 body {
@@ -32,7 +39,6 @@ body {
     background: var(--light-grey-1);
     color: var(--black);
 }
-
 
 /* ----------- General Components ------------*/
 
@@ -70,8 +76,7 @@ form {
 }
 
 button, input[type="submit"] {
-    height: 67px;
-    padding: 0 23px;
+    padding: 21px 23px;
     border: none;
     border-radius: 8px;
     font: var(--h4-font);
@@ -150,7 +155,7 @@ p {
 header {
     z-index: 2;
     width: 100%;
-    height: 86px;
+    height: var(--header-height);
     position: fixed;
     top: 0;
     background: var(--light-grey-1);
@@ -166,12 +171,11 @@ header .page-constraint {
 
 header button {
     font-size: 18px;
-    height: 44px;
+    padding: 10px 17px;
     border-radius: 4px;
 }
 
 header .row {
-    display: flex;
     gap: 10px;
     align-items: center;
 }
@@ -186,30 +190,16 @@ header nav ul {
     justify-content: space-between;
 }
 
-/* -------------- Scroll ------------- */
-
-.scroll-area {
-    margin-top: 86px;
-    height: calc(100vh - 86px);
-    overflow-y: auto;
-    scroll-behavior: smooth;
-}
-
-.scroll-down-btn {
-    position: sticky;
-    bottom: 20px;
-    color: var(--blue);
-}
-
 /* -------------- First Screen ------------- */
 
-.first-screen {
+main .first-screen {
+    margin-top: var(--header-height);
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.first-screen .page-constraint {
+main .first-screen .page-constraint {
     padding-top: 164px;
     padding-bottom: 263px;
     display: flex;
@@ -238,9 +228,17 @@ main .first-screen img {
     max-width: 470px;
 }
 
+main .first-screen .scroll-down-btn {
+    position: sticky;
+    bottom: 20px;
+    color: var(--blue);
+}
+
 /* -------------- Categories ------------- */
 
 main #categories {
+    scroll-snap-align: start;
+    scroll-margin-top: var(--header-height);
     overflow-x: hidden; /* hides dots for the last card when width < 1250*/
 }
 
