--- a/final-project/style.css
+++ b/final-project/style.css
@@ -32,6 +32,7 @@
 html {
     scroll-behavior: smooth;
     scroll-snap-type: y proximity;
+    scroll-padding-top: var(--header-height);
 }
 
 body {
@@ -237,8 +238,8 @@ main .first-screen .scroll-down-btn {
 /* -------------- Categories ------------- */
 
 main #categories {
-    scroll-snap-align: start;
-    scroll-margin-top: var(--header-height);
+    /*scroll-snap-align: start;*/
+    /*scroll-margin-top: var(--header-height);*/
     overflow-x: hidden; /* hides dots for the last card when width < 1250*/
 }
 
